Fixed navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -433,13 +433,17 @@ body {
 
   .intro-text::after {
     content: "";
-    width: 4px;
+    width: 3px;
     right: -10px;
     bottom: 0;
     height: 100%;
-    border-radius: 3px;
+    border-radius: 1px;
     background-color: var(--color-accent);
     position: absolute;
+  }
+
+  .navbar-nav li {
+    padding-left: 0;
   }
 
   .hero-image .img-fluid {
